--- a/week3/events-and-dom/style.css
+++ b/week3/events-and-dom/style.css
@@ -6,6 +6,9 @@
 
 :root {
   font-size: 62.5%;
+
+  /* box shadow */
+  --box-shadow: 3px 6px 9px 3px rgb(80, 145, 150);
 }
 
 h1 {
@@ -51,8 +54,8 @@ input {
   border-radius: 10px;
   caret-color: rgb(92, 182, 189);
   color: rgb(78, 78, 78);
-  box-shadow: 3px 6px 9px 3px rgb(80, 145, 150);
-  background-color: rgb(233, 233, 233);
+  box-shadow: var(--box-shadow);
+  background-color: white;
 }
 
 button {
@@ -60,7 +63,7 @@ button {
   padding: 0.5rem 2rem;
   outline: none;
   border-radius: 10px;
-  box-shadow: 3px 6px 9px 3px rgb(80, 145, 150);
+  box-shadow: var(--box-shadow);
   cursor: pointer;
 }
 button:hover,
@@ -71,7 +74,7 @@ button::selection {
 .add-item {
   border: solid 1px rgb(233, 233, 233);
   color: rgb(80, 145, 150);
-  background-color: rgb(233, 233, 233);
+  background-color: white;
 }
 .clear {
   border: solid 1px rgb(95, 170, 175);
@@ -80,11 +83,19 @@ button::selection {
 }
 
 .items-list {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  /* justify-content: flex-start; */
-  align-items: flex-start;
+  flex-wrap: wrap;
+  flex: 1 1 250px;
 }
 .items-list li {
-  list-style: square;
+  width: 25%;
+  word-wrap: break-word;
+  padding: 1rem;
+  background-color: white;
+  color: rgb(78, 78, 78);
+  list-style: none;
+  border-radius: 10px;
+  margin: 0 1rem 2rem 0;
+  box-shadow: var(--box-shadow);
 }
