--- a/week3/student-club-roster/style.css
+++ b/week3/student-club-roster/style.css
@@ -11,10 +11,49 @@
   --main-color: rgb(100, 80, 214);
   --main-text-color: white;
 }
+h1 {
+  font-size: 3.4rem;
+  font-weight: bold;
+}
+h2 {
+  font-size: 2.4rem;
+}
 
 body {
+  padding: 1rem 2rem;
   background-color: var(--main-color);
   color: var(--main-text-color);
+  font-size: 1.4rem;
+  display: grid;
+  place-items: center;
+}
+.title {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.form {
+  width: 70%;
+  margin-bottom: 6rem;
+}
+.list {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+button {
+  /* width: auto; */
+  padding: 0.5rem 2rem;
+  outline: none;
+  border: none;
+  background-color: white;
+  color: var(--main-color);
+  border-radius: 10px;
 }
 
 .selected {
@@ -25,7 +64,11 @@ body {
 
 input {
   width: 100%;
+  border: none;
+  outline: none;
   padding: 5px;
-  margin: 5px 5px 5px 0px;
+  margin: 5px 5px 10px 0px;
   box-sizing: border-box;
+  border-radius: 10px;
+  caret-color: var(--main-color);
 }
