--- a/week5/us-bridges/mapstyle.css
+++ b/week5/us-bridges/mapstyle.css
@@ -1,5 +1,20 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #2d8ca7;
+  color: whitesmoke;
+  padding: 50px 0;
+  display: grid;
+  place-items: center;
+}
+
 #usBridges-map {
-  background-color: rgb(223, 230, 233);
-  width: 600px;
-  height: 500px;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  height: 100vh;
+  margin-top: 50px;
 }
