--- a/midterm-project/css/main.css
+++ b/midterm-project/css/main.css
@@ -24,6 +24,81 @@ body {
     --switch: #5f616d;
   }
 
+  .dark-mode {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 1em;
+  }
+  .checkbox {
+    display: none;
+  }
+  .checkbox:checked ~ .switch:before{
+    transform: translateX(40px);
+  }
+  .switch {
+    /* border: 1px solid red; */
+    height: 40px;
+    display: block;
+    border-radius: 20px;
+    background: var(--switch);
+    width: 80px;
+    padding: 5px;
+    box-sizing: border-box;
+    cursor: pointer;
+    user-select: none;
+  }
+  .switch::before {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 30px;
+    background: var(--switchSpinner);
+    border-radius: 50%;
+    transform: translateX(0);
+    transition: .3s;
+    will-change: transform;
+  }
+
+
+  /* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
   .card {
     border-radius: 8px;
     overflow: hidden;
@@ -45,6 +120,13 @@ body {
     var(--instagram-1) 0%,
     var(--instagram-2) 100%
   );
+  }
+  
+  .card-title {
+    color: var(--baseColor);
+  }
+  .card-text {
+    color: var(--switch);
   }
   
   .wrapper {
