--- a/midterm-project/css/main.css
+++ b/midterm-project/css/main.css
@@ -15,7 +15,7 @@ body {
   --instagram-2: hsl(329, 70%, 58%);
   --youTube: hsl(348, 97%, 39%);
   --gray: #5f616d;
-  --cardGray: #f0f3fa;
+  --cardGray: #f3f5fa;
   --lightGray: #f8f9fe;
   --cardTitle: #6f717e;
   --baseBackground: white;
@@ -59,11 +59,16 @@ body {
   will-change: transform;
 }
 
-/* Modal */
-.modal-body {
-  background-color: var(--baseBackground);
-  color: var(--baseColor);
+/* Buttons */
+.viewCodeBtn {
+  background-color: var(--gray);
 }
+.viewStatsBtn {
+  background-color: var(--bright-red);
+  color: white;
+}
+
+/* Modal */
 .modal-title {
   font-weight: bold;
 }
