add welcome message when loading page, add display styles to welcome message and error messages, fix issue that throw error when input box was empty and function getRepos was called, normalize styles, handle welcome error messages and fix functionality of search button

--- a/midterm-project/css/main.css
+++ b/midterm-project/css/main.css
@@ -59,6 +59,13 @@ body {
   will-change: transform;
 }
 
+/* Welcome Message */
+.welcomeMsg,
+.no-repos {
+  height: 50vh;
+  display: grid;
+  place-items: center;
+}
 /* Buttons */
 .viewCodeBtn {
   background-color: var(--gray);
