create Vue app, connect data with input fields

--- a/week8/tracker/styles.css
+++ b/week8/tracker/styles.css
@@ -1,4 +1,8 @@
 #records {
-    max-height: 250px;
-    overflow: scroll;
+  max-height: 250px;
+  overflow: scroll;
+}
+
+[v-cloak] {
+  /* display: none; */
 }
