assign classes automatically depending on the record type to differentiate rows with colors

--- a/week8/tracker/styles.css
+++ b/week8/tracker/styles.css
@@ -6,3 +6,13 @@
 [v-cloak] {
   display: none;
 }
+
+.categoryOne {
+  background-color: salmon;
+}
+.categoryTwo {
+  background-color: skyblue;
+}
+.categoryThree {
+  background-color: mediumslateblue;
+}
