add 2 new inputs -textarea for comments and 2 check inputs for record progress-, modify theme color

--- a/week8/tracker/styles.css
+++ b/week8/tracker/styles.css
@@ -8,11 +8,11 @@
 }
 
 .categoryOne {
-  background-color: salmon;
+  background-color: sandybrown;
 }
 .categoryTwo {
   background-color: skyblue;
 }
 .categoryThree {
-  background-color: mediumslateblue;
+  background-color: khaki;
 }
