update styles to match row categories with theme, add method to calculate hours per category.

--- a/week8/tracker/styles.css
+++ b/week8/tracker/styles.css
@@ -8,11 +8,11 @@
 }
 
 .categoryOne {
-  background-color: sandybrown;
+  background-color: tomato;
 }
 .categoryTwo {
-  background-color: skyblue;
+  background-color: steelblue;
 }
 .categoryThree {
-  background-color: khaki;
+  background-color: mediumseagreen;
 }
